# zho-text-normalizer

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PROJECT_SUMMARY.md  README.md
data/backup/20250825_105606/: compatibility_mappings.json  kangxi_mappings.json  script_mappings.json  specialized_mappings.json  spoofing_mappings.json
data/processed/: semantic_mappings.json  variant_mappings.json  z_variant_mappings.json
data/processed/normalization/: compatibility_variants.json  kangxi_radicals.json  normalization_stats.json  semantic_variants.json
data/processed/script_conversion/: script_conversion_stats.json  simplified_to_traditional.json  traditional_to_simplified.json
examples/: advanced_usage.rs  basic_usage.rs
src/: constants.rs  lib.rs  types.rs
src/normalizers/: compatibility_normalizer.rs  kangxi_normalizer.rs  mod.rs  script_converter.rs  script_detector.rs  text_normalizer.rs  unicode_normalizer.rs  variant_normalizer.rs
src/utils/: data_processor.rs  mod.rs  opencc_validator.rs  unicode_utils.rs
