[package]
name = "zho-text-normalizer"
version = "0.1.0"
edition = "2021"
description = "Comprehensive Chinese text normalizer with 18,473+ character mappings from Unicode/Unihan data"
license = "MIT"
repository = "https://github.com/movapages/zho-text-normalizer"
homepage = "https://github.com/movapages/zho-text-normalizer"
documentation = "https://docs.rs/zho-text-normalizer"
keywords = ["chinese", "traditional", "simplified", "unicode", "unihan", "normalization"]
categories = ["text-processing", "internationalization", "localization"]
readme = "README.md"
authors = ["ZHO Text Normalizer Contributors"]

[lib]
name = "zho_text_normalizer"
path = "src/lib.rs"

[[bin]]
name = "zho-normalize"
path = "src/bin/zho-normalize.rs"

[[bin]]
name = "process-unihan"
path = "src/bin/process_unihan.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
opencc = "0.1"
unicode-normalization = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
